<resources>
    <string name="app_name">Notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="register_now">Пройдите регистрацию!</string>
    <string name="register_continue">Зарегистрируйтесь чтобы продолжить</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="login_in_account">Зайдите в свою учетную запись</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="continue_current_password">Чтобы продолжить, введите ваш текущий пароль</string>
    <string name="current_password">Текущий пароль</string>
    <string name="accept">Подтвердить</string>
    <string name="update">Обновить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="title">Заголовок</string>
    <string name="text">Текст</string>
</resources>
